# capdl

cdl_utils/: capdl_linker.py  untyped_gen.py
python-capdl-tool/: .gitignore  pyproject.toml  requirements.txt
python-capdl-tool/capdl/: Allocator.py  Cap.py  ELF.py  Object.py  PageCollection.py  Spec.py  __init__.py  util.py
python-capdl-tool/tests/: __init__.py  runall.py  test_allocator.py  testelf.py  testmerge.py
