#
# SPDX-FileCopyrightText: 2026 Oliver Scott <oliver.wm.github@gmail.com>
#
# SPDX-License-Identifier: BSD-2-Clause
#
[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "capdl"
version = "0.5.0.dev0"
requires-python = ">=3.8"
dependencies = [
    "aenum",
    "ordered-set",
    "pyelftools",
    "sortedcontainers",
    "concurrencytest",
    "hypothesis",
]

[tool.setuptools.packages.find]
include = ["capdl*"]
